objects/inov8__PMT_Program__c.object
<CustomObject>
    <description>Use in Project Management Tool to record Programs and related projects.</description>
    <fields>
        <fullName>inov8__Program_Health_Icon__c</fullName>
        <formula>IMAGE(
CASE(inov8__Program_Health__c,
&quot;Not Started&quot;, &quot;/resource/inov8__PMT_Status_logos/Not_Started.png&quot;,
&quot;On Track&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;,
&quot;At risk&quot;, &quot;/resource/inov8__PMT_Status_logos/At_Risk.png&quot;,
&quot;Late&quot;, &quot;/resource/inov8__PMT_Status_logos/Late.png&quot;,
&quot;On Hold&quot;, &quot;/resource/inov8__PMT_Status_logos/On_Hold.png&quot;,
&quot;Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Completed.png&quot;,
&quot;Closed, not Completed&quot;, &quot;/resource/inov8__PMT_Status_logos/Closed_not_Completed.png&quot;,
&quot;/resource/inov8__PMT_Status_logos/On_Track.png&quot;),
&quot;status icon&quot;,25,25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Health Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inov8__Program_Health__c</fullName>
        <label>Program Health</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inov8__PMT_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inov8__Program_Owner__c</fullName>
        <formula>Owner:User.FirstName +&quot; &quot;+ Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Owner</label>
        <type>Text</type>
    </fields>
    <label>PMT Program</label>
    <listViews>
        <fullName>inov8__All_Programs</fullName>
        <columns>NAME</columns>
        <columns>inov8__Program_Owner__c</columns>
        <columns>inov8__Program_Health_Icon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Programs</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMT Programs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>